RESOLVED FIXED137913
'true' isn't a valid value for justify-self
https://bugs.webkit.org/show_bug.cgi?id=137913
Summary 'true' isn't a valid value for justify-self
Jaehun Lim
Reported 2014-10-21 00:42:10 PDT
Attachments
Patch (4.38 KB, patch)
2014-10-21 00:52 PDT, Jaehun Lim
no flags
Jaehun Lim
Comment 1 2014-10-21 00:52:13 PDT
Andreas Kling
Comment 2 2014-10-21 13:59:04 PDT
Comment on attachment 240193 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-10-21 14:37:09 PDT
Comment on attachment 240193 [details] Patch Clearing flags on attachment: 240193 Committed r174999: <http://trac.webkit.org/changeset/174999>
WebKit Commit Bot
Comment 4 2014-10-21 14:37:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.