'true' isn't a valid value for justify-self https://bugs.webkit.org/show_bug.cgi?id=137913

Reviewed by Andreas Kling.

Merged from Blink (patch by dstockwell):
<https://src.chromium.org/viewvc/blink?view=rev&revision=174638>

CSS Box Alignment Module Level 3:
http://dev.w3.org/csswg/css-align/#justify-self-property

Source/WebCore:

No new tests, modify existing test case.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseJustifySelf):

LayoutTests:

Add a bad case where "justify-self: true"

* fast/css/parse-justify-self-expected.txt:
* fast/css/parse-justify-self.html:


Canonical link: https://commits.webkit.org/155800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174999 268f45cc-cd09-0410-ab3c-d52691b4dbfc